spacing fix

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -53,7 +53,7 @@ header {
 
     &.social-instagram {
       position: absolute;
-      right: 225px;
+      right: 215px;
       top: 50px;
     }
     &.social-github {
